# Torchure

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Lecture04/: gradients_torch.py
Lecture05/: loss_and_optimizers.py
Lecture06/: linear_regression.py
Lecture08/: dataloader.py
Lecture09/: transformers.py
Lecture1/: tensor_basics.py
Lecture10/: softmax_and_crossentropy.py
Lecture11/: activation_functions.py  plot_activations.py
Lecture12/: feedforward.py
Lecture13/: cnn.py
Lecture14/: transfer_learning.py
Lecture15/: tensorboard_script.py
Lecture16/: save_and_load.py
Lecture2/: autograd.py
Lecture3/: backpropagation.py
Lecture4/: gradients_numpy.py
Lecture5/: model_loss_and_optimizers.py
Lecture7/: logistic_regression.py
